cleaned up html residuals from other project

--- a/public/u/main.html
+++ b/public/u/main.html
@@ -4,37 +4,20 @@
     </div>
     <div class='jumboContent col-6'>
         <title>Chef of the Day</title>
-        <h1 >Welcome to Chef of the Day</h1>
+        <h1 >Welcome to Austin Nodeschool Express Routes and Middleware Example</h1>
 
-        <p>Thats me on the right. This is a side project to show my progress in learning the Mean Stack. I currently program in my spare time and was intersted in devloping applications which are mobile first and cross platform. "Chef of the Day" is to show I can learn programming as well as implement multiple layers of knowledge from front end devlopement, backend development and database management. Including working with external APIs to harness the power of other web services.</p>
-        <br><center>
-        <p> I'm Currently familiar with the following
+        <p>You've reached the mainpage of this example you are here because you must have passed the token check</p>
+        <br>
+        <center>
+            <p> This example uses the following technologies</p>
             <image class="ego" src="https://www.gstatic.com/images/branding/product/1x/maps_64dp.png "></image>
-            ,<image class="ego" src="https://angularjs.org/img/AngularJS-large.png"></image>
-            ,<image style="background-color= black;" class="ego" src="https://nodejs.org/static/images/logos/nodejs-green.png"></image>,
-            <image class="ego" src="https://upload.wikimedia.org/wikipedia/en/e/eb/MongoDB_Logo.png"></p></center><br>
-        <p>I started progamming in October, 2014 and started this specific project June 2015. Currently I have a laundry list of features to implement but if you enjoy my work feel free to give me a shot-out on twitter <a href="https://twitter.com/theoneravenous">TheOneRavenous</a></p>
-        <h2 id="jumboHOne">Below is access to my demo app "Chef of the Day" it's currently in pre-alpha, version: 0.5.1, currently supprted through the browser</h2>
-        <p>I'm currently working on application features before I attempt to wrap it in cordova to make it a downloadable mobile application. I've also just recenetly got all the seperate modules working so i'm now in the process of wiring them togeether with the new data model</p>
-        <h2 id="jumboHOne">Explore Local Chefs</h2>
-        <p>Once registered you'll have access to Chefs in your very own neighborhood.        </p>
-
-            <br>
-            <center>
-            <image class="sampleImg" src="../images/mapSamp.png"></image>
-            <image class="sampleImg" src="../images/muSamp.png"></image>
-            </center>
-             <br>
-
+            <image class="ego" src="https://angularjs.org/img/AngularJS-large.png"></image>
+            <image style="background-color= black;" class="ego" src="https://nodejs.org/static/images/logos/nodejs-green.png"></image>
+            <image class="ego" src="https://upload.wikimedia.org/wikipedia/en/e/eb/MongoDB_Logo.png"></image>
+        </center>
+        <p>The repository for this code can be found on github <a href="https://github.com/Kalevera/q">https://github.com/Kalevera/q</a></p>
         <h2> What's going on here?</h2>
-        <p>  This application was made to find local Chefs cooking awesome food in your neighborhood.
-            Eventually you'll be able to request a Cheff cook some meals, or just purchase ready made meals.
-            This is for Bakers and Chefs alike, or maybe some Breakfast connoisseurs. Who knows?</p>
+        <p>  This mini app was made to show off NodeJs Express features, I included one front end as an option.</p>
 
-        <h2>Safety is important</h2>
-        <p>
-            Chefs will have inital inspections and will not be allowed to have pets, they will also be required
-            to use common sanitary practices, including thermometers, timers, hold times, and disinfection practices.
-        </p>
     </div>
 </div>
